# bluez_native

./: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
example/: agent_pair_device.dart  connect_device.dart  custom_pairing_agent.dart  device_properties.dart  example_utils.dart  notify_characteristic.dart  pair_device.dart  read_characteristic.dart  read_descriptor.dart  scan_devices.dart  set_discoverable.dart  set_pairable.dart  set_trust.dart  write_characteristic.dart
example/flutter_ble_scanner/: pubspec.yaml
example/flutter_ble_scanner/lib/: characteristic_screen.dart  device_screen.dart  main.dart  pairing_dialog.dart  scanner_screen.dart
hook/: build.dart
lib/: bluez_native.dart
lib/src/: bluez_adapter.dart  bluez_client.dart  bluez_device.dart  bluez_gatt_characteristic.dart  bluez_gatt_descriptor.dart  enums.dart
lib/src/ffi/: bindings.dart  bluez_native_asset.dart  codec.dart  types.dart
lib/src/internal/: library_loader.dart
native/: CMakeLists.txt
native/include/: bluez_bridge.h  bluez_types.h  gatt_bridge.h  pairing_agent.h
native/src/: bluez_bridge.cpp  gatt_bridge.cpp  pairing_agent.cpp
test/: codec_test.dart  types_test.dart
